JumpScript/tests/baselines/reference/pathsValidation1.errors.txt
tests/cases/compiler/jmpconfig.json(5,18): error TS5063: Substitutions for pattern '*' should be an array.


==== tests/cases/compiler/jmpconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "*": "*"
                     ~~~
!!! error TS5063: Substitutions for pattern '*' should be an array.
            }
        }
    }
==== tests/cases/compiler/a.jump (0 errors) ====
    let x = 1;